# spiro.rlib

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: bezctx_oplist_glifparser.rs  inner.rs  lib.rs
tests/: data.rs  glifparser.rs  postscript.rs  run_spiro.rs
tests/data/: broken_s.oplist  pseudo_circle.oplist  spiro.ps
