[package]
name = "spiro"
version = "1.0.2"
authors = [
  "Fredrick Brennan <copypaste@kittens.ph>",
  "Seth Erfurt <seth@ske.moe>",
  "Raph Levien <raph.levien@gmail.com>",
  "MFEK Authors",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["spiro", "curve-conversion", "c2rust"]
description = "Raph Levien's C implementation of Spiro in pure Rust, transpiled by C2Rust and then heavily edited"
repository = "https://github.com/MFEK/spiro.rlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", optional = true }
glifparser = { version = "2.0", optional = true, default-features = false }

[dev-dependencies]
snapbox = "0.6.21"

[features]
default = ["log", "glifparser"]
